[tool.poetry]
name = "pymines"
version = "0.1.0"
description = "Infinite minesweeper game"
authors = ["Andrew Kritzler <10812727+peppermintpatty5@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
